# ImportHg-FairyShogi

./: .hgignore  CMakeLists.txt  Doxyfile  FairyShogiConfig.cmake.in  Makefile.am  README.md  bootstrap.sh  configure.ac  setuplinks.sh
.CMake/: CheckConstExpr.cmake  CheckOverride.cmake  CheckStaticAssert.cmake  CheckStdInt.cmake  Makefile.am
.M4/: CheckConstExpr.m4  CheckExtraFlags.m4  CheckNullPtr.m4  CheckStaticAssert.m4  FindCurses.m4  LinkerScripts.m4  WithExtLibs.m4
CMake/: CheckNullPtr.cmake
Include/FairyShogi/.Config/: ConfiguredFairyShogi.h.in  ExtraConfig.h.autoconf.in  ExtraConfig.h.cmake.in
Include/FairyShogi/Common/: ActionView.h  DefaultShogiPieces.h  FairyShogiConst.h  FairyShogiSettings.h  FairyShogiTypes.h  HelperMacros.h  MersenneTwister.h  ViewBuffer.h
Include/FairyShogi/Engine/: EngineBase.h
Include/FairyShogi/Game/: BitSet.h  BoardState.h  RuleTables.h
Include/FairyShogi/Helper/: TerminalScreen.h
Include/FairyShogi/Interface/: BitmapImage.h  ConsoleInterface.h  GameController.h  GraphicalInterface.h  PixelMatrix.h  ViewBuffer.h
Include/FairyShogi/TextUI/: TextUserInterface.h
Include/FairyShogi/Win32/: Animation.h  BitmapImage.h  BitmapResource.h  CommonResources.h  CommonResources.rc  DialogWindow.h  MatchDialog.h
Lib/: CMakeLists.txt  Makefile.am
Lib/.Config/: CMakeLists.txt  Makefile.am
Lib/.LinkerScript/: fsgEngine.in  fsgGame.in  fsgHelper.in  fsgInterface.in  fsgTextUI.in  fsgWin32.in
Lib/Common/: CMakeLists.txt  Makefile.am
Lib/Engine/: CMakeLists.txt  EngineBase.cpp  EngineImplements.cpp  EngineImplements.h  EngineLevel0.cpp  EngineLevel0.h  EngineLevel1.cpp  EngineLevel1.h  EngineLevel2.cpp  EngineLevel2.h  EngineLevel3.cpp  EngineLevel3.h  EngineLevel4.cpp  EngineLevel4.h  Makefile.am
Lib/Engine/Tests/: TestConf.cmake
Lib/Game/: BoardState.cpp  CMakeLists.txt  Makefile.am  RuleTables.cpp  RuleTables.h
Lib/Game/Tests/: RuleTablesTest.cpp  TestConf.cmake  TestConf.mak
Lib/Helper/: CMakeLists.txt  Makefile.am  TerminalScreen.cpp
Lib/Interface/: BitmapImage.cpp  CMakeLists.txt  ConsoleInterface.cpp  GameController.cpp  GraphicalInterface.cpp  Makefile.am  PixelMatrix.cpp
Lib/Tests/: Makefile.am  TestDriver.cpp  TestDriver.h
Lib/Tests/.TestsCommon/: CMakeLists.txt  Makefile.am
Lib/TextUI/: CMakeLists.txt  Makefile.am  TextUserInterface.cpp
Lib/TextUI/Tests/: TestConf.mak
Lib/Win32/: Animation.cpp  BitmapImage.cpp  BitmapResource.cpp  CMakeLists.txt  CommonResources.rc  DialogWindow.cpp  Makefile.am  MatchDialog.cpp
M4/: CheckExtraFlags.m4  CheckNullPtr.m4  CheckOverride.m4
