
##
##    List of Directories.
##

SUBLIBS  =  Common  Helper  Game  Engine  Interface

SUBLIBS  +=  TextUI

if  FAIRYSHOGI_AMCNF_ENABLE_WINDOWS_H
SUBLIBS  +=  Win32
endif

SUBDIRS  =  Tests  .Config  $(SUBLIBS)  .

##
##    List of Installs.
##

dist_noinst_DATA        =  \
        CMakeLists.txt

